--- a/style.css
+++ b/style.css
@@ -10,11 +10,28 @@
     display: flex;
     justify-content: right;
     align-items: last baseline;
+    
 }
 .circulos1 div{
     width: 100px;
     height: 100px;
     background-color:#a7a1d5 ;
     border-radius: 50%;
+    margin: 5px;
+}
+.circulo2{
+    background-color: #d9f5c7;
+    height: 200px;
+    width: 100vw;
+    display: flex;
+    justify-content: end;
+    align-items: center ;
     
+}
+.circulo2 div{
+    width: 100px;
+    height: 100px;
+    background-color:#7aab5b ;
+    border-radius: 50%;
+    margin: 5px;
 }
