--- a/style.css
+++ b/style.css
@@ -35,3 +35,21 @@
     border-radius: 50%;
     margin: 5px;
 }
+.circulo3{
+    background-color: #f8e3e4;
+    height: 200px;
+    width: 100vw;
+    display: flex;
+    justify-content: right;
+    justify-content: center;
+    align-items: center ;
+    
+}
+.circulo3 div{
+    width: 100px;
+    height: 100px;
+    background-color:#c87579 ;
+    border-radius: 50%;
+    margin: 5px;
+}
+
