--- a/style.css
+++ b/style.css
@@ -52,4 +52,22 @@
     border-radius: 50%;
     margin: 5px;
 }
+.circulo4{
+    background-color: #f4f5d5;
+    height: 200px;
+    width: 100vw;
+    display: flex;
+    justify-content: right;
+    justify-content: space-between;
+    align-items: center;
+    
+}
+.circulo4 div{
+    width: 100px;
+    height: 100px;
+    background-color:#d3d826 ;
+    border-radius: 50%;
+    
+}
+
 
