--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 .circulos1{
     background-color: #e6e4f5;
-    height: 200px;
+    height: 20%;
     width: 100vw;
     display: flex;
     justify-content: right;
@@ -21,7 +21,7 @@
 }
 .circulo2{
     background-color: #d9f5c7;
-    height: 200px;
+    height:20%;
     width: 100vw;
     display: flex;
     justify-content: end;
@@ -37,7 +37,7 @@
 }
 .circulo3{
     background-color: #f8e3e4;
-    height: 200px;
+    height: 20%;
     width: 100vw;
     display: flex;
     justify-content: right;
@@ -54,7 +54,7 @@
 }
 .circulo4{
     background-color: #f4f5d5;
-    height: 200px;
+    height: 20%;
     width: 100vw;
     display: flex;
     justify-content: right;
@@ -67,7 +67,27 @@
     height: 100px;
     background-color:#d3d826 ;
     border-radius: 50%;
+}
+.circulo5{
+    background-color: #d5e7ff;
+    height: 20%;
+    width: 100vw;
+    display: flex;
+    justify-content: right;
+    justify-content: space-evenly;
+    align-items: center;
     
 }
+.circulo5 div{
+    width: 100px;
+    height: 100px;
+    background-color:#527fba ;
+    border-radius: 50%;
+}
+main{
+    
+    height: 100vh;
+    
 
+}
 
